ziro.css
/* ... */
/* dividers */
.Y_WW1akjiQKXSzCBalCD {
  display: none;
}
/* navbar */
.main-rootlist-rootlistDividerContainer {
  display: none;
}
.main-navBar-navBarLinkActive,
.main-collectionLinkButton-selected,
.main-rootlist-rootlistItemLinkActive {
  color: var(--spice-shadow) !important;
  background: var(--spice-selected-row) !important;
}
.main-navBar-navBarLink,
.main-collectionLinkButton-collectionLinkButton,
.main-rootlist-rootlistItemLink,
.main-createPlaylistButton-button {
  border-radius: var(--br-1) !important;
}
.main-navBar-navBarLink:hover,
.main-collectionLinkButton-collectionLinkButton:hover,
.main-rootlist-rootlistItemLink:hover,
.main-createPlaylistButton-button:hover {
  background: var(--spice-button-disabled);
}
.main-rootlist-rootlistItem {
  padding: 0 8px 0 calc(8px + var(--indentation) * 8px);
}
.main-rootlist-rootlistItemLink {
  padding: 0 16px;
}
.main-rootlist-statusIcons,
.main-rootlist-expandArrow {
  position: absolute;
  top: 10px;
  right: 24px;
}
.main-rootlist-expandArrow {
  top: 8px;
  color: var(--spice-subtext);
}
.main-rootlist-rootlistItemLinkActive + .main-rootlist-statusIcons .main-rootlist-playButton,
.main-rootlist-rootlistItemLinkActive + .main-rootlist-expandArrow {
  color: var(--spice-shadow) !important;
}
.main-navBar-navBarLink {
  color: var(--spice-text);
}
.main-collectionLinkButton-collectionLinkButton > *,
.main-createPlaylistButton-button {
  opacity: 1 !important;
}
.main-rootlist-rootlist .os-scrollbar {
  padding: 0 0 0 8px;
}
/* player */
.main-nowPlayingBar-center .playback-progressbar {
  position: absolute;
  left: 0;
  bottom: 84px;
}
.main-nowPlayingBar-nowPlayingBar:not(:only-child) .playback-progressbar {
  bottom: 108px;
}
.playback-bar {
  --bar: var(--spice-button);
}
.volume-bar {
  --bar: var(--spice-subtext);
  margin-right: 8px;
}
.playback-bar .progress-bar {
  --progress-bar-radius: 0;
}
.playback-bar:hover .progress-bar,
.playback-bar .DuvrswZugGajIFNXObAr {
  --progress-bar-height: 8px;
}
.x-progressBar-progressBarBg {
  background-color: var(--spice-button-disabled);
}
.DuvrswZugGajIFNXObAr .progress-bar__slider,
.epWhU7hHGktzlO_dop6z {
  background-color: var(--bar) !important;
}
.progress-bar__slider {
  display: block;
  background-color: var(--spice-shadow);
  border: 2px solid var(--bar);
  height: 16px;
  width: 16px;
}
.playback-bar .progress-bar__slider {
  height: 20px;
  width: 20px;
}
.playback-bar__progress-time-elapsed,
.main-playbackBarRemainingTime-container {
  color: var(--spice-subtext);
  position: absolute;
  margin-bottom: 30px;
  right: 266px;
}
.playback-bar__progress-time-elapsed {
  right: 308px;
}
.playback-bar__progress-time-elapsed::after {
  content: '  /';
}
.player-controls__buttons {
  margin: 0;
}
.player-controls__buttons button:not(.main-playPauseButton-button) {
  color: var(--spice-button) !important;
}
.connect-device-list-content {
  border-radius: var(--br-1);
  border: 1px solid var(--spice-button-disabled);
  padding: 12px;
}
.connect-device-list-item:hover {
  background-color: var(--spice-button-disabled);
  border-radius: var(--br-2);
}
.cover-art-image {
  border-radius: calc(var(--br-2) / 2);
}
.main-coverSlotCollapsed-container[aria-hidden='true'] .cover-art-image {
  border-radius: var(--br-1);
}
/* friends */
.main-buddyFeed-addFriendsContainer {
  background-color: var(--spice-sidebar);
}
.main-buddyFeed-friendActivity {
  padding: 8px;
  margin: 8px;
  background: var(--spice-card);
  border-radius: var(--br-1);
}
.HdRGC,
.eEsqRZ,
.main-buddyFeed-usernameAndTimestamp a {
  color: var(--spice-text) !important;
}
.main-buddyFeed-activityMetadata > :not(:first-child) a,
.main-buddyFeed-timestamp {
  color: var(--spice-subtext) !important;
}
.main-avatar-avatar.vreGJrlRqoFkzlSQwvsJ:after {
  background: var(--spice-text);
  box-shadow: none;
}
/* cards */
.main-card-card,
.Z35BWOA10YGn5uc9YgAp,
.main-heroCard-card,
.a2ruVaZt_DdrdHz3GqgU,
.x-categoryCard-CategoryCard {
  background-color: var(--spice-card);
  border-radius: var(--br-1);
}
.Z35BWOA10YGn5uc9YgAp:hover {
  background: var(--spice-button-disabled);
}
.main-cardImage-imageWrapper:not(.main-cardImage-circular) {
  border-radius: var(--br-2);
}
.Z35BWOA10YGn5uc9YgAp .main-image-image {
  border-radius: var(--br-2) 0 0 var(--br-2);
}
.zXwER4Lsqq_e7fVVaPkZ {
  background-color: transparent !important;
}
.cSeieV {
  background-color: var(--spice-button-active);
}
/* menus */
.main-contextMenu-menu {
  border: 1px solid var(--spice-button-disabled);
  border-radius: var(--br-1);
  padding: 8px;
}
.main-contextMenu-menuItemButton:hover {
  background-color: var(--spice-button-disabled);
}
.main-contextMenu-menuItemButton {
  border-radius: var(--br-2);
}
.main-contextMenu-menuItemButton::before,
.main-contextMenu-menuItemButton::after {
  display: none;
}
.main-contextMenu-menuItemButton {
  color: var(--spice-text) !important;
}
/* input */
.x-searchInput-searchInputInput,
.x-proxySettings-proxyInput,
.main-dropDown-dropDown,
.QZhV0hWVKlExlKr266jo,
.amTaUy6eMlbKh0wzrOnb {
  background: var(--spice-card);
  border-radius: var(--br-2);
}
.x-searchInput-searchInputSearchIcon,
.x-searchInput-searchInputInput,
.x-searchInput-searchInputClearButton {
  color: var(--spice-text) !important;
}
/* buttons */
.wCl7pMTEE68v1xuZeZiB:hover,
.w6j_vX6SF5IxSXrrkYw5:hover,
.w6j_vX6SF5IxSXrrkYw5[data-context-menu-open='true'],
.fLS8v3_EfBadEerbGVoR:hover,
.aAr9nYtPsG7P2LRzciXc {
  background: var(--spice-button-disabled);
  border-radius: var(--br-2);
}
.w6j_vX6SF5IxSXrrkYw5 {
  background-color: transparent;
}
.main-actionBar-ActionBarRow button:not(.bqeOGM),
.QhF9ZR7YOiJeFiEnfkOr button,
.CpQBQL6M4D3bquNOpKd9,
.player-controls__buttons button,
.DbMYFmOEEz9PH1h1zK9n button,
.main-moreButton-button,
.w6j_vX6SF5IxSXrrkYw5,
.gIobRDHAxkAvUaF4_OOL button {
  color: var(--spice-button);
}
/* ... */

